Optimized search for enrolment by ID.